# watermelon

./: .gitignore  .gitmodules  Ball.gd  Ball.tscn  Main.gd  bg_main.tscn  build_android_SFML.bat  debug.keystore  project.godot
.import/: Bouncy Platform Long.png-9b2628c180785c5ec622adb5c4ee7b17.stex  Bouncy Platform Medium.png-7896338a5f44da1e83084c154a3c4a9e.md5  bb.wav-1599e71539f1b884b76f851e0f846c90.md5
ThirdPersonShooter/: project.godot
ThirdPersonShooter/door/textures/: door_emission.png.import  door_orm.png.import
ThirdPersonShooter/level/forklift/: flying_forklift_albedo.png.import  flying_forklift_normal.png.import
ThirdPersonShooter/player/bullet/: blue_myst.png.import
ThirdPersonShooter/player/model/: Cannon_Charge.tres  flinch_heavy.tres  metarigAction-noexp.tres  running_nogun-cycle.tres  strafe_allinone-noexp.tres  strafe_idle_to_forward-noexp.tres  (+4 more)
andoim/: .gitignore  build.gradle  settings.gradle
andoim/app/: build.gradle
ccwatermelon/ccmelon/: package.json
ccwatermelon/example-3d/: .gitignore
cocos/ccmelon/: package.json
cocos/melon/: package.json
cocos/tutorial-mind-your-step-3d/: package.json
godot/: .gitignote
godot/ThirdPersonShooter/: Godot Third-Person Shooter Demo.apk.idsig
godot/watermelon/: Ball.gd  project.godot  watermelon.tscn
greatwall/: .gitignore  CMakeLists.txt
greatwall/executor/: CMakeLists.txt
greatwall/executor/android/: .gitignore  settings.gradle
greatwall/executor/android/app/: build.gradle
greatwall/executor/android/app/src/main/: AndroidManifest.xml
greatwall/executor/android/app/src/main/res/values/: strings.xml  themes.xml
greatwall/executor/android/app/src/main/res/values-night/: themes.xml
greatwall/executor/src/: hello.cc
greatwall/src/: xonix.cpp
mobile2d/: .gitignore
mobile3d/3DMoonRunner/: .gitignore
purec/: settings.gradle
purec/app/: build.gradle
purec/app/src/main/jni/: CMakeLists.txt
purec/app/src/main/jni/src/: main.cpp
ue4/: .gitignore
unity3d/: .gitignore
unity3d/3DMoonRunner/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
unity3d/flappybird/: .gitignore  Assembly-CSharp.csproj  flappybird.sln
unity3d/honor/: .gitignore
unity3d/platformer2dr/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Unity.2DPlatformer.Tutorials.csproj  Unity.Platformer.Tutorials.csproj  platformer2dr.sln
watermelon/: Main.gd  project.godot
watermelon/.import/: Bouncy Platform Long.png-9b2628c180785c5ec622adb5c4ee7b17.md5  bb.ogg-43db8ca9979bf6cfefe7e85e1cc1eddf.oggstr
watermelon/assets/: bb.ogg.import
(+244 files in other folders)
